--- a/src/styles/Premium.scss
+++ b/src/styles/Premium.scss
@@ -103,6 +103,7 @@ body .premium__container .premium__card .box .content a {
     margin-top: 20px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     transition: 0.5s;
+    cursor: pointer;
 }
 body .premium__container .premium__card .box .content a:hover {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
