--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -28,7 +28,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     border: 1px solid;
-    margin-top: 20%;
+    margin: 20% auto 0 auto;
     padding: 15px 10px 15px 50px;
     background-repeat: no-repeat;
     background-position: 10px center;
