--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -29,6 +29,7 @@
     font-size: 16px;
     border: 1px solid;
     margin: 20% auto 0 auto;
+    width: 70%;
     padding: 15px 10px 15px 50px;
     background-repeat: no-repeat;
     background-position: 10px center;
@@ -38,7 +39,7 @@
 }
 
 .post__title {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 5px;
     text-align: center;
     letter-spacing: 1.5px;
