--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -9,9 +9,11 @@
     margin: auto 0 0 0;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 .footer_dark {
     background-color: #0E1111;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .footer__widget {
     display: flex;
