--- a/src/styles/General.scss
+++ b/src/styles/General.scss
@@ -1,3 +1,5 @@
+@import "var";
+
 * {
     margin: 0;
     -webkit-tap-highlight-color: transparent;
@@ -11,6 +13,18 @@ body {
     flex-direction: column;
     min-height: 100vh;
     width: 100%;
+}
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    background: #1c1c1c;
+    border: 2px solid #0E1111;
+}
+::-webkit-scrollbar-thumb {
+    background: $btn_col;
+    border-radius: 4px;
+    border: 5px solid transparent;
 }
 .dark {
     background: #1c1c1c;
@@ -28,10 +42,16 @@ body {
     .container {
         max-width: 750px;
     }
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
 }
 @media (max-width: 767px) {
     .container {
         max-width: none;
+    }
+    ::-webkit-scrollbar {
+        width: 5px;
     }
 }
 .online_status {
