--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -2,6 +2,7 @@
 
 .main {
     width: 100%;
+    display: flex;
 }
 .post {
     text-align: center;
@@ -129,7 +130,7 @@
     cursor: pointer;
     transition-duration: 0.6s;
     content: "+";
-    z-index: 1;
+    z-index: 2;
     &:hover {
         background: $hov_col;
         transform: translateY(-5px);
